add Semesterticket beantragen

--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
 						<li class="list-group-item"><a href="https://ausleihe.mp.hs-owl.de/" role="button">Verleihmanager</a><span class="badge badge-danger">Intern/VPN</span></li>
 						<li class="list-group-item"><a href="http://idm.th-owl.de" role="button">IDM (KIS-Card, Hochschulzertifikat)</a></li>
 						<li class="list-group-item"><a href="https://www.th-owl.de/skim/dokumentation.html" role="button">SKIM Dokumentationen</a></li>
+						<li class="list-group-item"><a href="https://www.ots-nrw.de/index.php/product/80/show#ticket_options" role="button">Semesterticket beantragen</a></li>
 						<li class="list-group-item"><a href="https://www.th-owl.de/medienproduktion/studium/im-studium/" role="button">"Im Studium" Infos und Links auf th-owl.de</a></li>
 						<li class="list-group-item"><a href="http://www.studierendenwerk-bielefeld.de/essen-trinken/essen-und-trinken-in-mensen/lemgo/mensa-th-owl.html" role="button">Mensaplan</a></li>
 						<li class="list-group-item"><a href="https://www.ciit-owl.de/index.php/ciitrus" role="button">Ciitrus Wochenplan</a></li>			
-					
+						
 				 </div>
 			  </div><br><br>
 		<div class="col-md-4 mx-auto">
