--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
 					 
 				 </div>
 			  </div>
+
+
+		<div class="col-md-4 mx-auto" style="margin-left: 0px;margin-right: 0px;">
+		<div class="card">
+			<div class="card-header text-center">
+				Link fehlt oder funktioniert nicht?
+			</div>
+			
+			<ul class="list-group list-group-flush">
+				
+				<li class="list-group-item">https://forms.gle/An7yx5y5dcQbWJD99<span class="badge badge-secondary">Kontaktformular</span></li>
+			</ul>
+			
+		</div>
+		</div>
 			
 	</div>
 		
