fixing missing href

--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
 			</div>
 			
 			<ul class="list-group list-group-flush">
-				
-				<li class="list-group-item">https://forms.gle/An7yx5y5dcQbWJD99<span class="badge badge-secondary">Kontaktformular</span></li>
+				<li class="list-group-item"><a href="https://forms.gle/An7yx5y5dcQbWJD99" target="_blank" role="button">Kontaktformular</a></li>
 			</ul>
 			
 		</div>
